package edu.upc.prop.scrabble.data.board;

public enum BoardType {
    Junior,
    Standard,
    Super
}
