package edu.upc.prop.scrabble.data.properties;

public enum Language {
    English,
    Catalan,
    Spanish
}
